--- a/src/app/Components/kda-calculator/kda-calculator.component.scss
+++ b/src/app/Components/kda-calculator/kda-calculator.component.scss
@@ -1,44 +1,9 @@
-//.wrapper {
-//  display: flex;
-//  flex-direction: row;
-//  gap: 40px;
-//  justify-content: center;
-//  align-items: center;
-//  height: calc(100vh - 90px);
-//}
-
-@media only screen and (min-width: 1422px) {
-  .wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 90px);
-  }
-
-  .min-height-and-spacing {
-    min-height: 354px;
-    justify-content: space-between;
-  }
-
-  .container-chart {
-    min-height: 354px;
-  }
-
-  .container-min-width {
-    min-width: 400px;
-  }
+.container-min-width {
+  min-width: 330px;
 }
 
-@media only screen and (max-width: 1421px) {
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-  }
+.spacing {
+  justify-content: space-between;
 }
 
 .fielset-with-inputs {
@@ -46,10 +11,6 @@
   flex-direction: column;
   gap: 40px;
 }
-
-
-
-
 
 .container-fieldset {
   display: flex;
@@ -61,7 +22,6 @@
 .container-input-buttons {
   display: flex;
   flex-direction: row;
-  gap: 40px;
   justify-content: space-between;
 }
 
@@ -84,4 +44,66 @@
   display: flex;
   justify-content: center;
   gap: 10px;
+}
+
+/** Media Queries **/
+
+@media only screen and (min-width: 1330px) {
+  .container-kda-calc {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 90px);
+  }
+
+  .container-kda-calc-and-chart {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .min-height {
+    min-height: 400px;
+  }
+
+  .min-height-kda-fieldset {
+    min-height: 264px;
+  }
+}
+
+@media only screen and (max-width: 1329px) {
+  .container-kda-calc-and-chart {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .container-kda-calc {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 90px);
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .container-kda-calc {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: 10px;
+  }
+
+  .container-kda-calc-and-chart {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
