--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,19 +1,19 @@
 <p-toolbar>
-  <div>
-    <!--
-    <p-button icon="pi pi-discord"
-              (onClick)="showInfo()"/>
-    -->
-  </div>
-  <div>
-    <h2> K/D/A Calculator</h2>
-  </div>
-  <div>
-    <!--
-    <p-button [icon]="getActiveTheme()? 'pi pi-moon' : 'pi pi-sun'"
-              rounded="true"
-              (onClick)="switchThemes()"/>
-    -->
-  </div>
+    <div>
+        <!--
+        <p-button icon="pi pi-discord"
+                  (onClick)="showInfo()"/>
+        -->
+    </div>
+    <div>
+        <h2>{{ 'kdaCalculator' | translate }}</h2>
+    </div>
+    <div class="options">
+        <!--    <p-button [icon]="getActiveTheme()? 'pi pi-moon' : 'pi pi-sun'"-->
+        <!--    (onClick)="switchThemes()"/>-->
+        <p-selectButton
+                [options]="languageOptions"
+                (onOptionClick)="switchLanguage($event)"/>
+    </div>
 </p-toolbar>
 <p-toast/>
