--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -13,6 +13,7 @@
         <!--    (onClick)="switchThemes()"/>-->
         <p-selectButton
                 [options]="languageOptions"
+                [(ngModel)]="currentLanguge"
                 (onOptionClick)="switchLanguage($event)"/>
     </div>
 </p-toolbar>
