Fixed a little Bug with showing the Chart when KDA is 0 due to deaths only

--- a/src/app/Components/kda-calculator/kda-calculator.component.html
+++ b/src/app/Components/kda-calculator/kda-calculator.component.html
@@ -81,7 +81,7 @@
     <div class="container-fieldset">
       <p-fieldset legend="{{ 'chartView' | translate }}" class="chart">
         <div class="min-height container-min-width">
-          @if (kdaStats.kda != 0) {
+          @if (kdaHasBeenCalculated) {
             <p-chart type="pie" [data]="data" [options]="options"/>
           } @else {
             <div class="no-kda-info">
